--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ padding: 10px;
     .info1{
         width: 100%;
     }
-    header div{
-        padding: 10px;
+    .hero{
+        margin: 20px !important;
     }
   }
